fix css bugs #2892
- fix broken layout when window is very small
- fix rounded input field border when input gets big

--- a/stylus/framework/footer.styl
+++ b/stylus/framework/footer.styl
@@ -54,7 +54,7 @@
 		position: relative
 		display: flex
 		border: 1px solid #d3d3d3
-		border-radius: 100px
+		border-radius: 25px
 		background-color: #fff
 		box-shadow: 0px 1px 1px 0px rgba(100, 100, 100, 0.05);
 
