--- a/stylus/framework/sidebar.styl
+++ b/stylus/framework/sidebar.styl
@@ -29,7 +29,6 @@
 .nav-outer
 	min-width: 200px
 	width: client-navigation-width
-	max-width: 38.2%
 .nav-inner
 	width: 100%
 
